[package]
name = "bic_exporter"
version = "0.1.0"
edition = "2021"
description = "Convert BIC directory PDF to CSV format"

[lib]
name = "bic_exporter"
crate-type = ["cdylib", "rlib"]

[dependencies]
pdf = "0.9"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rustler = "0.37"

[dev-dependencies]
tempfile = "3.14"
regex = "1.11"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
# Test-only feature to verify Rustler catches panics and doesn't crash the BEAM
panic_test = []
