[package]
name = "bic_exporter"
version = "0.1.0"
edition = "2021"
description = "Convert BIC directory PDF to CSV format"

[lib]
name = "bic_exporter"
crate-type = ["cdylib"]

[dependencies]
pdf = "0.9"
anyhow = "1.0"
rustler = "0.37"

[dev-dependencies]
csv = "1.3"

[features]
default = ["nif_version_2_16"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
# Test-only feature to verify Rustler catches panics and doesn't crash the BEAM
panic_test = []
